--- a/app/templates/tickets/modals/tickets_summary_modal.html
+++ b/app/templates/tickets/modals/tickets_summary_modal.html
@@ -1,5 +1,5 @@
 <div class="modal" id="tickets-summary-modal" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered modal-lg">
+    <div class="modal-dialog modal-dialog-centered modal-xl">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Summary of Displayed Tickets</h5>
@@ -11,7 +11,7 @@
                     <div class="colums">
                         <div class="column">
                             <!-- Surface total tickets for all users (admin) or for single user -->
-                            <div class="mb-3">
+                            <!-- <div class="mb-3">
                                 {% if current_user.is_admin%}
                                     Number of Total Tickets for All Users:
                                 {% else %}
@@ -30,13 +30,46 @@
 
                             <div class="mb-3">
                                 Average number of problems being worked on per day: {{statistics.average_problems_worked_per_day}}
+                            </div> -->
+
+                            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 gap-4">
+
+
+                                {% set current_user_name = current_user.first_name + " " + current_user.last_name %}
+                                {% set total_tickets_subtitle = "(All Users)" if current_user.is_admin 
+                                                                 else '(' ~ current_user_name ~ ')' %}
+                                {{ macros.metrics_card("Total Tickets", subtitle=total_tickets_subtitle, text=tickets | length) }}
+
+                                {{ macros.metrics_card("Avg. Time to Close", subtitle="(Days)", 
+                                                        text=statistics.average_time_to_close) }}
+
+                                {{ macros.metrics_card("Avg. Opened Problems", subtitle="(Per Day)", text=statistics.average_opened_problems_per_day) }}
+
+                                {{ macros.metrics_card("Avg. Problems Worked", subtitle="(Per Day)", text=statistics.average_problems_worked_per_day) }}
+
                             </div>
-                            
                             <!-- Table for Ticket Summary -->
-                            <div class="table-responsive">
+                            <div class="table-responsive mt-5">
                                 <table class="table table-striped">
+
+                                    {% set export_btns %}
+                                        <div class="input-group">
+                                            <div class="input-group-text" id="btnGroupAddon2">Export to</div>
+                                            <div class="btn-group">
+                                                <button class='btn btn-outline-secondary'>Excel</button>
+                                                <button class='btn btn-outline-secondary'>PDF</button>
+                                            </div>
+                                        </div>
+                                    {% endset %}
+
+                                    {{ macros.section_header(
+                                        title='All Open Tickets', 
+                                        subtitle='Shows all open tickets', 
+                                        size='h5',
+                                        extra_html=export_btns | safe
+                                    ) }}
                                     <h5>All Open Tickets</h5>
-                                    <thead>
+                                    <thead class="table-dark">
                                         <tr>
                                             <th>Problem Type</th>
                                             <th>Date Reported</th>
@@ -56,11 +89,6 @@
                                         {% endfor %}
                                     </tbody>
                                 </table>
-                            </div>
-
-                            <div class='d-flex justify-content-around'>
-                                <button class='btn btn-primary'> Export Summary to Excel Sheet </button>
-                                <button class='btn btn-secondary'> Export Summary to PDF </button>
                             </div>
                         </div>
                     </div>
