--- a/app/templates/tickets/modals/tickets_update_modal.html
+++ b/app/templates/tickets/modals/tickets_update_modal.html
@@ -1,5 +1,5 @@
 <div class="modal" id="tickets-update-modal" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">Update Trouble Ticket</h5>
@@ -8,57 +8,64 @@
             <div class="modal-body">
                 <!-- Form to allow admin to update a ticket -->
                 <form action="{{ url_for('tickets.tickets_update_ticket') }}" method="POST">
-                    <div class="colums">
-                        <div class="column">
 
-                            <!-- Hidden ticket id field to retrieve current ticket from the JS function -->
-                            <input type="hidden" id="ticket-id" name="ticket-id">
+                    <div class="row mb-3">
 
-                            <!-- Date Detected (default value is at time of click)-->
-                            <div class="mb-3">
-                                <label for="date-detected" class="form-label">Date Detected</label>
-                                <input
-                                    type="date"
-                                    class="form-control"
-                                    id="date-detected"
-                                    name="date-detected"
-                                    required>
-                            </div>
+                        <!-- Hidden ticket id field to retrieve current ticket from the JS function -->
+                        <input type="hidden" id="ticket-id" name="ticket-id">
 
-                            <!-- Problem Status -->
-                            <div class="mb-3">
-                                <label for="problem-status" class="form-label">Problem Status</label>
-                                <select class="form-control" id="problem-stauts" name="problem-status" required>
-                                    <option value="" disabled selected>Select Status</option>
-                                    <option value="open">Open</option>
-                                    <option value="in-progress">In Progress</option>
-                                    <option value="resolved">Resolved</option>
-                                </select>
-                            </div>
-                            
-                            <!-- Problem Resolution -->
-                            <div class="mb-3">
-                                <label for="problem-resolution" class="form-label">Problem Resolution</label>
-                                <textarea
-                                class="form-control"
-                                id="problem-resolution"
-                                name="problem-resolution"
-                                ></textarea>
-                            </div>
-                            
-                            <!-- Date Resolved -->
-                            <div class="mb-3">
-                                <label for="date-resolved" class="form-label">Date Resolved</label>
-                                <input
-                                   type="date"
-                                   class="form-control"
-                                   id="date-resolved"
-                                   name="date-resolved"
-                                   >
-                            </div>
-
+                        <!-- Date Detected (default value is at time of click)-->
+                        <div class="col-md-4">
+                            {{ macros.input_group_floating(
+                                label='Date Detected',
+                                id='date-detected',
+                                name='date-detected',
+                                type='date',
+                                tooltip='Enter the date the problem was detected.',
+                            ) }}
                         </div>
+
+                        <!-- Date Resolved -->
+                        <div class="col-md-4">
+                            {{ macros.input_group_floating(
+                                label='Date Resolved',
+                                id='date-resolved',
+                                name='date-resolved',
+                                type='date',
+                                tooltip='Enter the date the problem was resolved.',
+                            ) }}
+                        </div>
+
+                        <!-- Problem Status -->
+                        <div class="col-md-3">
+                            {% set options = [('open', 'Open'), ('in-progress', 'In Progress'), ('resolved', 'Resolved')] %}
+                            {{ macros.select_group_floating(
+                                label='Problem Status',
+                                id='problem-status',
+                                name='problem-status',
+                                options=options,
+                                tooltip='Enter the status of the problem.',
+                            ) }}
+                        </div>
+
                     </div>
+
+                    <div class="row mb-3">
+                        
+                        <!-- Problem Resolution -->
+                        <div class="col-md-8">
+                        {{ macros.input_group_floating(
+                            label='Problem Resolution',
+                            id='problem-resolution',
+                            name='problem-resolution',
+                            type='textarea',
+                            tooltip='Enter the resolution to the problem.',
+                        ) }}
+                        </div>
+
+                    </div>
+
+
 
                     <!-- Modal Footer -->
                     <div class="modal-footer d-flex justify-content-between align-items-center">
