--- a/app/templates/tickets/tickets.html
+++ b/app/templates/tickets/tickets.html
@@ -36,88 +36,120 @@
                 <!-- Query Search Form -->
                 <form method="GET" action="{{ url_for('tickets.tickets_query_tickets') }}" class="row g-3">
 
-                    <!-- Customer Name -->
-                    <div class="col-md-3">
-                        {{ macros.input_group_floating(
-                            label='Customer Name',
-                            id='customer-name',
-                            name='customer-name',
-                            tooltip='Enter the customer name to search for tickets.',
-                        ) }}
-                    </div>
-            
-                    <!-- Type of Problem -->
-                    <div class="col-md-3">
+                    <div class="row mb-3">
 
-                        {{ macros.input_group_floating(
-                            label='Type of Problem',
-                            id='problem-type',
-                            name='problem-type',
-                            tooltip='Enter the type of problem to search for tickets.',
-                        ) }}
+                        <!-- Customer Name -->
+                        <div class="col-md-3">
+                            {{ macros.input_group_floating(
+                                label='Customer Name',
+                                id='customer-name',
+                                name='customer-name',
+                                tooltip='Enter the customer name to search for tickets.',
+                            ) }}
+                        </div>
+                
+                        <!-- Type of Problem -->
+                        <div class="col-md-3">
 
-                    </div>
-            
-                    <!-- Problem Status -->
-                    <div class="col-md-2">
+                            {{ macros.input_group_floating(
+                                label='Type of Problem',
+                                id='problem-type',
+                                name='problem-type',
+                                tooltip='Enter the type of problem to search for tickets.',
+                            ) }}
 
-                        {% set options = [('open', 'Open'), 
-                                          ('in_progress', 'In Progress'), 
-                                          ('resolved', 'Resolved')] %}
+                        </div>
+                
+                        <!-- Problem Status -->
+                        <div class="col-md-2">
 
-                        {{ macros.select_group_floating(
-                            label='Problem Status',
-                            id='problem-status',
-                            name='problem-status',
-                            options=options,
-                            tooltip='Select the status of the problem to search for tickets.',
-                        ) }}
+                            {% set options = [('open', 'Open'), 
+                                            ('in_progress', 'In Progress'), 
+                                            ('resolved', 'Resolved')] %}
 
-                    </div>
-            
-                    <!-- Date Reported -->
-                    <div class="col-md-2">
+                            {{ macros.select_group_floating(
+                                label='Problem Status',
+                                id='problem-status',
+                                name='problem-status',
+                                options=options,
+                                tooltip='Select the status of the problem to search for tickets.',
+                            ) }}
 
-                        {{ macros.input_group_floating(
-                            label='Date Reported',
-                            id='date-reported',
-                            name='date-reported',
-                            type='date',
-                            tooltip='Enter the date the problem was reported to search for tickets.',
-                        ) }}
+                        </div>
 
-                        <input type="date" class="form-control" name="date-reported-start">
-                        <input type="date" class="form-control" name="date-reported-end">
-                        <label for="date-reported"><small>Date Reported (Start - End)</small></label>
                     </div>
 
-                    <!-- div class="col-md-1 text-center">
-                        <h5> to </h5>
-                    </div --> 
-            
-                    <!-- Date Resolved -->
-                    <div class="col-md-2">
-                        <input type="date" class="form-control" name="date-resolved-start">
-                        <input type="date" class="form-control" name="date-resolved-end">
-                        <label for="date-resolved" class="text-center"><small>Date Resolved (Start - End)</small></label>
-                    </div>
-            
-                    <!-- Submit Button -->
-                    <div class="col-md-2 ">
-                        <button type="submit" class="btn btn-primary w-100">Search</button>
+                    <div class="row mb-3">
+                
+                        <!-- Date Reported -->
+                        <div class="col-md-4">
+
+                            <div class="input-group">
+
+                                {{ macros.input_group_floating(
+                                    label='Date Reported (Start)',
+                                    id='date-reported-start',
+                                    name='date-reported-start',
+                                    type='date',
+                                    tooltip='Enter the start date the problem was reported.',
+                                ) }}
+
+                                {{ macros.input_group_floating(
+                                    label='Date Reported (End)',
+                                    id='date-reported-end',
+                                    name='date-reported-end',
+                                    type='date',
+                                    tooltip='Enter the end date the problem was reported.',
+                                ) }}
+
+                            </div>
+
+                        </div>
+
+                        <!-- Date Resolved -->
+                        <div class="col-md-4">
+
+                            <div class="input-group">
+
+                                {{ macros.input_group_floating(
+                                    label='Date Resolved (Start)',
+                                    id='date-resolved-start',
+                                    name='date-resolved-start',
+                                    type='date',
+                                    tooltip='Enter the start date the problem was resolved.',
+                                ) }}
+
+                                {{ macros.input_group_floating(
+                                    label='Date Resolved (End)',
+                                    id='date-resolved-end',
+                                    name='date-resolved-end',
+                                    type='date',
+                                    tooltip='Enter the end date the problem was resolved.',
+                                ) }}
+                            
+                            </div>
+
+                        </div>
+                
+                        <!-- Submit Button -->
+                        <div class="col-md-2 ">
+                            <button type="submit" class="btn btn-primary w-100">Search</button>
+                        </div>
+
                     </div>
                 </form>
             </div>
                 
             <table class="table table-hover table-borderless">
                 {% if tickets %}
-                    <thead>
+                    <thead class="table-dark">
                         <tr>
                             {% for key in tickets[0].keys() %}
                                 {% if key not in ['id'] %}
-                                    <th scope="col">{{ key.replace('_', ' ').capitalize() }}</th>
+                                    <th scope="col">{{ key | attribute }}</th>
                                 {% endif %}
                             {% endfor %}
+                            <th scope="col">Action</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -125,7 +157,15 @@
                             <tr onclick="openModal({{ ticket }}, {{ ticket['id'] }})">
                                 {% for key, value in ticket.items() %}
                                     {% if key not in ['id'] %}
-                                        <td>{{ value }}</td>
+                                        {% if key == 'source' %}
+                                            <td>{{ value | title }}</td>
+                                        {% elif 'date' in key %}
+                                            <td>{{ value | date if value else '-' }}</td>
+                                        {% elif key == 'problem_resolution' %}
+                                            <td>{{ value.capitalize() if value else '-'}}</td>
+                                        {% else %}
+                                            <td>{{ value | capitalize }}</td>
+                                        {% endif %}
                                     {% endif %}
                                 {% endfor %}
                                 <td>
