Add 'Shipments' link to navbar and update ticket search fields to be optional

--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -10,6 +10,7 @@
         <ul class="nav flex-column flex-grow-1 noscroll">
             {{ macros.nav_element('inventory.inventory_home', 'Inventory', 'bi-box-seam') }}
             {{ macros.nav_element('orders.orders_home', 'Orders', 'bi-cart') }}
+            {{ macros.nav_element('shipments.shipments_home', 'Shipments', 'bi-mailbox-flag') }}
             {{ macros.nav_element('tickets.tickets_home', 'Trouble Tickets', 'bi-ticket-perforated') }}
             {{ macros.nav_element('invoices.invoices_home', 'Invoices', 'bi-folder2-open') }}
             
