--- a/app/templates/shipments/status_report.html
+++ b/app/templates/shipments/status_report.html
@@ -33,7 +33,7 @@
     <table class="table table-hover table-borderless table-striped">
         {% if shipments %}
             {% set hidden_attributes = ['id', 'user_id', 'order_id', 'order'] %}
-            <thead>
+            <thead class="table-dark">
                 <tr>
                     {% for key in shipments[0].keys() %}
                         {% if key not in hidden_attributes %}
